--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --open",
-    "build": "webpack"
+    "start": "cross-env NODE_ENV=development webpack serve --open --config webpack.config.js",
+    "build": "cross-env NODE_ENV=production webpack"
   },
   "engines": {
     "npm": "dont use npm"
@@ -22,6 +22,7 @@
     "@types/styled-components": "^5.1.15",
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.13.3",
+    "cross-env": "^7.0.3",
     "html-webpack-plugin": "^5.4.0",
     "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "^4.4.4",
