--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
+    "@hot-loader/react-dom": "^17.0.1",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.10",
     "@types/styled-components": "^5.1.15",
@@ -24,6 +25,7 @@
     "babel-plugin-styled-components": "^1.13.3",
     "cross-env": "^7.0.3",
     "html-webpack-plugin": "^5.4.0",
+    "react-hot-loader": "^4.13.0",
     "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "^4.4.4",
     "webpack": "^5.59.0",
