--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@hot-loader/react-dom": "^17.0.1",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.10",
+    "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.15",
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.13.3",
@@ -35,6 +36,7 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "styled-components": "^5.3.3"
   }
 }
