--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix --ignore-path .gitignore",
     "start": "cross-env NODE_ENV=development webpack serve --open --config webpack.config.js",
-    "build": "cross-env NODE_ENV=production webpack"
+    "build": "cross-env NODE_ENV=production webpack",
+    "prepare": "husky install"
   },
   "engines": {
     "npm": "dont use npm"
@@ -36,6 +38,8 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^5.4.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^11.2.6",
     "prettier": "2.4.1",
     "react-hot-loader": "^4.13.0",
     "tsconfig-paths-webpack-plugin": "^3.5.1",
@@ -49,5 +53,10 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "styled-components": "^5.3.3"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix"
+    ]
   }
 }
