--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.13.3",
     "cross-env": "^7.0.3",
+    "dotenv": "^10.0.0",
     "eslint": "^8.1.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
