--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
+    "@mui/material": "^5.1.0",
+    "@mui/styled-engine-sc": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
