--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.1.0",
     "@mui/material": "^5.1.0",
     "@mui/styled-engine-sc": "^5.1.0",
     "react": "^17.0.2",
